// Autogenerated by:
// ../../src/tools/ftrace_proto_gen/ftrace_proto_gen.cc
// Do not edit.

syntax = "proto2";
package perfetto.protos;

message NeighCleanupAndReleaseFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional uint32 lladdr_len = 3;
  optional uint32 flags = 4;
  optional uint32 nud_state = 5;
  optional uint32 type = 6;
  optional uint32 dead = 7;
  optional int32 refcnt = 8;
  optional uint32 primary_key4 = 9;
  optional uint64 confirmed = 10;
  optional uint64 updated = 11;
  optional uint64 used = 12;
  optional uint32 err = 13;
}
message NeighCreateFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional int32 entries = 3;
  optional uint32 created = 4;
  optional uint32 gc_exempt = 5;
  optional uint32 primary_key4 = 6;
}
message NeighEventSendDeadFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional uint32 lladdr_len = 3;
  optional uint32 flags = 4;
  optional uint32 nud_state = 5;
  optional uint32 type = 6;
  optional uint32 dead = 7;
  optional int32 refcnt = 8;
  optional uint32 primary_key4 = 9;
  optional uint64 confirmed = 10;
  optional uint64 updated = 11;
  optional uint64 used = 12;
  optional uint32 err = 13;
}
message NeighEventSendDoneFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional uint32 lladdr_len = 3;
  optional uint32 flags = 4;
  optional uint32 nud_state = 5;
  optional uint32 type = 6;
  optional uint32 dead = 7;
  optional int32 refcnt = 8;
  optional uint32 primary_key4 = 9;
  optional uint64 confirmed = 10;
  optional uint64 updated = 11;
  optional uint64 used = 12;
  optional uint32 err = 13;
}
message NeighTimerHandlerFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional uint32 lladdr_len = 3;
  optional uint32 flags = 4;
  optional uint32 nud_state = 5;
  optional uint32 type = 6;
  optional uint32 dead = 7;
  optional int32 refcnt = 8;
  optional uint32 primary_key4 = 9;
  optional uint64 confirmed = 10;
  optional uint64 updated = 11;
  optional uint64 used = 12;
  optional uint32 err = 13;
}
message NeighUpdateFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional uint32 lladdr_len = 3;
  optional uint32 flags = 4;
  optional uint32 nud_state = 5;
  optional uint32 type = 6;
  optional uint32 dead = 7;
  optional int32 refcnt = 8;
  optional uint32 primary_key4 = 9;
  optional uint64 confirmed = 10;
  optional uint64 updated = 11;
  optional uint64 used = 12;
  optional uint32 new_state = 13;
  optional uint32 update_flags = 14;
  optional uint32 pid = 15;
}
message NeighUpdateDoneFtraceEvent {
  optional uint32 family = 1;
  optional string dev = 2;
  optional uint32 lladdr_len = 3;
  optional uint32 flags = 4;
  optional uint32 nud_state = 5;
  optional uint32 type = 6;
  optional uint32 dead = 7;
  optional int32 refcnt = 8;
  optional uint32 primary_key4 = 9;
  optional uint64 confirmed = 10;
  optional uint64 updated = 11;
  optional uint64 used = 12;
  optional uint32 err = 13;
}
